--- a/app/src/main/res/layout/fragment_novel.xml
+++ b/app/src/main/res/layout/fragment_novel.xml
@@ -16,7 +16,11 @@
         android:layout_height="0dp"/>
 
     <Button
-        android:id="@+id/bt"
+        android:id="@+id/bt1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <Button
+        android:id="@+id/bt2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
