添加设置界面

--- a/app/src/main/res/layout/activity_episode_result.xml
+++ b/app/src/main/res/layout/activity_episode_result.xml
@@ -55,6 +55,7 @@
     </RelativeLayout>
 
     <Button
+        style="@style/Widget.AppCompat.Button.Borderless"
         android:id="@+id/bt_read"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
