--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,14 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="50dp">
+        <Button
+            android:textSize="19sp"
+            android:textAllCaps="false"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:text="@string/setting"
+            android:id="@+id/btn_setting"
+            android:layout_width="50dp"
+            android:layout_height="match_parent" />
         <EditText
             android:layout_weight="1"
             android:inputType="text"
